--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automobile</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="img/logo.jpg" width="150px" alt="Logo da Empresa">
-       <p>Automobile</p> 
+        <img src="img/logo.jpg" width="150px" alt="Automobile">
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -44,7 +44,9 @@
     </main>
     <footer>
         <section id="contato">
+            
             <h2>Contato</h2>
+            <fieldset>
             <form action="#"> <!--Formulario de contato-->
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome"><br><br>
@@ -53,6 +55,7 @@
                 <label for="mensagem">Mensagem:</label>
                 <textarea id="mensagem" name="mensagem" rows="3" cols="50"></textarea><br><br>
                 <button type="submit">Enviar</button>
+            </fieldset>
                 
 
             </form>
