Refactor header layout and enhance styling in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <img src="img/logo.jpg" width="150px" alt="Automobile">
+        <section id="info">
+            <h1>Automobile</h1>
+            <p>Seu portal de informações sobre carros</p>
+        </section>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -43,8 +46,7 @@
 
     </main>
     <footer>
-        <section id="contato">
-            
+        <section id="contato"> 
             <h2>Contato</h2>
             <fieldset>
             <form action="#"> <!--Formulario de contato-->
