Update footer structure and styling; add contact information and adjust layout in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </ul>
         </nav>
     </header>
-    <main> <!--Adicionar carroseis?-->
-        <article id="carrosel">
+    <main> 
+        <article id="carrosel"> <!--Adicionar noticias automotivas?-->
             <div id="carouselCaptions" class="carousel slide" >
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -135,6 +135,21 @@
 
     </main>
     <footer>
+      <section>
+        <address>
+            <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
+            <p>Telefone: (11) 1234-5678</p>
+        </address>
+
+    </section>
+    
+    <section>
+      <!--Adicionar algo como links -->
+      <p>Hello</p>
+      <p>hello 2</p>
+      <p>hello 3</p>
+    </section>
+
         <section id="contato"> 
             <h2>Contato</h2>
             <form>
@@ -151,14 +166,6 @@
                 <button class="btn btn-primary" type="submit">Submit form</button>
               </div>
             </form>
-        </section>
-
-        <section>
-            <address>
-                <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
-                <p>Telefone: (11) 1234-5678</p>
-            </address>
-
         </section>
 
     </footer>
