Enhance product description and styling; update text content and adjust layout in index.html and style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <header>
         <section id="info">
             <h1>Automobile</h1>
-            <p>Carros Exclusivos para Você</p>
+            <p>Carros exclusivos para quem busca luxo, desempenho e sofisticação. Descubra nossa seleção de esportivos, supercarros e hypercars das marcas mais desejadas do mundo. 
+              Potência, design e tecnologia de ponta em um só lugar. Seu próximo carro dos sonhos está aqui!</p>
         </section>
         <nav>
             <ul>
@@ -100,7 +101,9 @@
             <div class="card-img-overlay" >
               <h3 class="card-title">SOBRE OS CARROS</h3>
               <p class="card-text">Os carros são veículos essenciais no mundo moderno, proporcionando liberdade e conforto para viagens diárias e longas distâncias. Seja um modelo compacto ou um veículo de luxo, eles atendem a diversas necessidades de transporte.</p>
-              <p class="card-text">Com inovações tecnológicas a cada ano, os carros se tornam mais eficientes, econômicos e seguros, permitindo uma experiência de direção melhor para todos.</p>
+              <p>Com inovações tecnológicas a cada ano, os carros se tornam mais eficientes, econômicos e seguros, permitindo uma experiência de direção melhor para todos.</p>
+              <p>Nossa seleção de veículos exclusivos reúne o que há de mais avançado em engenharia automotiva, design e inovação. Trabalhamos com marcas icônicas e modelos de alto desempenho, incluindo esportivos, supercarros e hypercars, projetados para oferecer máxima performance, 
+                tecnologia de ponta e um nível inigualável de luxo. Cada detalhe é pensado para proporcionar uma experiência única ao volante, combinando potência, aerodinâmica e materiais de última geração. Se você busca exclusividade e excelência, encontrou o lugar certo.</p>
             </div>
           </div>
             
