--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automobile</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-</head>
+    <script src="./js/scripts.js" defer></script>
+  </head>
 <body>
     <header>
         <section id="info">
@@ -18,8 +19,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#Estoque">ESTOQUE</a></li>
-                <li><a href="#Produtos">SOBRE</a></li>
+                <li><a href="./pages/estoques.html">ESTOQUE</a></li>
+                <li><a href="#descricao">SOBRE</a></li>
                 <li><a href="#location">LOCALIZAÇÃO</a></li>
                 <li><a href="#contato">CONTATO</a></li>
             </ul>
@@ -142,15 +143,28 @@
 
         <section id="contato"> 
             <h2>Contato</h2>
-            <form>
+            <form id="form">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="nome">
+            </div>
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Email</label>
                 <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@exemplo.com">
-              </div>
-              <div class="mb-3">
+            </div>
+
+            <div class="mb-3">
                 <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div> 
+            </div> 
+
+            <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label">CPF</label>
+              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="12345678910">
+            </div>
+
+
               <!--Modificar-->
               <div class="col-12" style="text-align: center; margin-bottom: 15px;">
                 <button class="btn btn-primary" type="submit">Submit form</button>
@@ -160,5 +174,7 @@
 
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+
+
+  </body>
 </html>
