Enhance contact form validation; update input fields for name, email, CPF, and message in index.html, and add JavaScript validation logic in js/scripts.js

--- a/index.html
+++ b/index.html
@@ -145,31 +145,31 @@
             <h2>Contato</h2>
             <form id="form">
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="nome">
-            </div>
-            <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Email</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="email@exemplo.com">
+                <label for="name" class="form-label">Nome</label>
+                <input type="text" class="form-control" id="name" placeholder="nome">
             </div>
 
             <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div> 
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="email@exemplo.com">
+            </div>
 
             <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
             <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">CPF</label>
-              <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="12345678910">
+              <label for="cpf" class="form-label">CPF</label>
+              <input type="number" class="form-control" id="cpf" placeholder="12345678910">
             </div>
 
+            <div class="mb-3">
+              <label for="message" class="form-label">Mensagem</label>
+              <textarea name="message" class="form-control" id="message" rows="3"></textarea>
+            </div> 
 
-              <!--Modificar-->
-              <div class="col-12" style="text-align: center; margin-bottom: 15px;">
-                <button class="btn btn-primary" type="submit">Submit form</button>
-              </div>
-            </form>
+            <!--Modificar-->
+            <div class="col-12" style="text-align: center; margin-bottom: 15px;">
+              <button class="btn btn-primary" type="submit">Submit form</button>
+            </div>
+          </form>
         </section>
 
     </footer>
