Update product images and enhance form validation; standardize image size in style.css, change image sources in index.html, and improve CPF input validation in js/scripts.js

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
               <div class="col-md-4 col-sm-6 mb-3">
                 <div class="card">
-                  <img src="./img/products/car-4.jpg" class="card-img-top" alt="...">
+                  <img src="./img/products/mustang.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <p class="card-text">Card 4.</p>
                   </div>
@@ -83,7 +83,7 @@
         
               <div class="col-md-4 col-sm-6 mb-3">
                 <div class="card">
-                  <img src="./img/products/car-4.jpg" class="card-img-top" alt="...">
+                  <img src="./img/products/pagani-utopia.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <p class="card-text">Card 4.</p>
                   </div>
@@ -157,7 +157,7 @@
             <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
             <div class="mb-3">
               <label for="cpf" class="form-label">CPF</label>
-              <input type="number" class="form-control" id="cpf" placeholder="12345678910">
+              <input type="text" class="form-control" id="cpf" placeholder="12345678910">
             </div>
 
             <div class="mb-3">
