--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="./pages/estoques.html">ESTOQUE</a></li>
                 <li><a href="#descricao">SOBRE</a></li>
                 <li><a href="#location">LOCALIZAÇÃO</a></li>
-                <li><a href="#contato">CONTATO</a></li>
+                <li><a href="./pages/contato.html">CONTATO</a></li>
             </ul>
         </nav>
     </header>
@@ -49,7 +49,7 @@
                 <div class="card">
                   <img src="./img/products/aspiration-4927227.jpg" class="card-img-top" alt="Imagem McLaren">
                   <div class="card-body">
-                    <p class="card-text">McLaren.</p>
+                    <p class="card-text">McLaren</p>
                   </div>
                 </div> <!-- Fecha .card -->
               </div> <!-- Fecha .col-md-4 -->
@@ -58,7 +58,7 @@
                 <div class="card">
                   <img src="./img/products/mustang-tails-2428590.jpg" class="card-img-top" alt="Mustang 1970">
                   <div class="card-body">
-                    <p class="card-text">Mustang 1970.</p>
+                    <p class="card-text">Mustang 1970</p>
                   </div>
                 </div> <!-- Fecha .card -->
               </div> <!-- Fecha .col-md-4 -->
@@ -67,7 +67,7 @@
                 <div class="card">
                   <img src="./img/products/ferrari-about.jpg" class="card-img-top" alt="Ferrari 458 Italia">
                   <div class="card-body">
-                    <p class="card-text">Ferrari 458 Italia.</p>
+                    <p class="card-text">Ferrari 458 Italia</p>
                   </div>
                 </div> <!-- Fecha .card -->
               </div> <!-- Fecha .col-md-4 -->
@@ -76,7 +76,7 @@
                 <div class="card">
                   <img src="./img/products/mustang.jpg" class="card-img-top" alt="Ford Mustang">
                   <div class="card-body">
-                    <p class="card-text">Ford Mustang.</p>
+                    <p class="card-text">Ford Mustang</p>
                   </div>
                 </div> <!-- Fecha .card -->
               </div> <!-- Fecha .col-md-4 -->
@@ -85,7 +85,7 @@
                 <div class="card">
                   <img src="./img/products/pagani-utopia.jpg" class="card-img-top" alt="Pagani Utopia">
                   <div class="card-body">
-                    <p class="card-text">Pagani Utopia.</p>
+                    <p class="card-text">Pagani Utopia</p>
                   </div>
                 </div> <!-- Fecha .card -->
               </div> <!-- Fecha .col-md-4 -->
@@ -125,57 +125,17 @@
         </ol>
 
     </main>
-    
+
     <footer>
       <section id="location">
-        <address>
-            <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
-            <p>Telefone: (11) 1234-5678</p>
-        </address>
-
-    </section>
-    
-    <section id="social-media">
-      <!--Adicionar algo como links -->
-      <p>Facebook</p>
-      <p>Instagram 2</p>
-      <p>hello 3</p>
-    </section>
-
-        <section id="contato"> 
-            <h2>Contato</h2>
-            <form id="form">
-            <div class="mb-3">
-                <label for="name" class="form-label">Nome</label>
-                <input type="text" class="form-control" id="name" placeholder="nome">
-            </div>
-
-            <div class="mb-3">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="email@exemplo.com">
-            </div>
-
-            <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
-            <div class="mb-3">
-              <label for="cpf" class="form-label">CPF</label>
-              <input type="text" class="form-control" id="cpf" placeholder="12345678910">
-            </div>
-
-            <div class="mb-3">
-              <label for="message" class="form-label">Mensagem</label>
-              <textarea name="message" class="form-control" id="message" rows="3"></textarea>
-            </div> 
-
-            <!--Modificar-->
-            <div class="col-12" style="text-align: center; margin-bottom: 15px;">
-              <button class="btn btn-primary" type="submit">Submit form</button>
-            </div>
-          </form>
-        </section>
-
+          <address>
+              <p>Rua dos Bobos, 0 - Casimiro de Abreu, Rio de Janeiro</p>
+              <p>Telefone: (11) 1234-5678</p>
+          </address>
+      </section>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
   </body>
 </html>
