Add telefone input field to contato.html for contact form

--- a/pages/contato.html
+++ b/pages/contato.html
@@ -46,6 +46,11 @@
                   <label for="email" class="form-label">Email</label>
                   <input type="email" class="form-control" id="email" placeholder="email@exemplo.com">
               </div>
+
+              <div class="mb-3">
+                <label for="telefone" class="form-label">Telefone</label>
+                <input type="number" class="form-control" id="telefone" placeholder="11241411124" maxlength="11">
+                </div>
   
               <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
               <div class="mb-3">
