--- a/pages/contato.html
+++ b/pages/contato.html
@@ -70,7 +70,7 @@
 
               <div class="mb-3">
                 <label for="telefone" class="form-label">Telefone</label>
-                <input type="number" class="form-control" id="telefone" placeholder="11241411124" maxlength="11">
+                <input type="text" class="form-control" id="telefone" placeholder="11241411124" maxlength="11">
                 </div>
   
               <!--Modificações a se fazer para Validação CPF com JS, usar numéros integer-->
