--- a/pages/contato.html
+++ b/pages/contato.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automobile</title>
-    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Contato Automobile</title>
+    <link rel="shortcut icon" href="/./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="/./js/scripts.js" defer></script>
@@ -70,7 +70,7 @@
 
               <div class="mb-3">
                 <label for="telefone" class="form-label">Telefone</label>
-                <input type="text" class="form-control" id="telefone" placeholder="11241411124" maxlength="11">
+                <input type="text" class="form-control" id="telefone" placeholder="119XXXXYYYY" maxlength="11">
                 </div>
   
               <div class="mb-3">
