--- a/pages/contato.html
+++ b/pages/contato.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/./img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="/./js/scripts.js" defer></script>
+    <script src="/./js/forms.js" defer></script>
   </head>
 <body>
 
@@ -71,11 +71,6 @@
               <div class="mb-3">
                 <label for="telefone" class="form-label">Telefone</label>
                 <input type="text" class="form-control" id="telefone" placeholder="119XXXXYYYY" maxlength="11">
-                </div>
-  
-              <div class="mb-3">
-                <label for="cpf" class="form-label">CPF</label>
-                <input type="text" class="form-control" id="cpf" placeholder="12345678910">
               </div>
   
               <div class="mb-3">
