--- a/pages/proposta.html
+++ b/pages/proposta.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="/./img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <script src="/./js/proposta.js" defer></script>
+    <script src="/./js/scripts.js" defer></script>
 </head>
 <body class="bg-dark">
     <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -26,7 +26,10 @@
                     <label for="telefone" class="form-label">Telefone</label>
                     <input type="text" id="telefone" class="form-control" placeholder="119XXXXYYYY" required maxlength="11">
                 </div>
-                
+                <div class="mb-3">
+                    <label for="cpf" class="form-label">CPF</label>
+                    <input type="text" class="form-control" id="cpf" placeholder="12345678910">
+                  </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Mensagem</label>
                     <textarea name="message" class="form-control" id="message" rows="3" required></textarea>
