--- a/pages/estoques.html
+++ b/pages/estoques.html
@@ -47,8 +47,6 @@
         </nav>
 
     </header>
-
-
     
     <main>
         <section class="category-products">
@@ -63,7 +61,7 @@
                         <!-- Card 1 -->
                         <div class="col-md-4 col-sm-6 mb-3">
                             <div class="card" data-bs-toggle="modal" data-bs-target="#modalLamborghini" style="cursor: pointer;">
-                                <img src="/./img/products/lamborghini.jpg" class="card-img-top" alt="Imagem Lamborghini">
+                                <img src="/./img/products/lamborghini.jpg" class="card-img-top" alt="Lamborghini Aventador">
                                 <div class="card-body">
                                     <p class="card-text">LAMBORGHINI Aventador</p>
                                     <p>2022/2022 - 300 KM</p>
@@ -100,7 +98,7 @@
                         <!-- Card 2 -->
                         <div class="col-md-4 col-sm-6 mb-3">
                             <div class="card" data-bs-toggle="modal" data-bs-target="#modalMcLaren" style="cursor: pointer;">
-                                <img src="/./img/products/aspiration-4927227.jpg" class="card-img-top" alt="Imagem Lotus Evora">
+                                <img src="/./img/products/aspiration-4927227.jpg" class="card-img-top" alt="Lotus Evora">
                                 <div class="card-body">
                                     <p class="card-text">LOTUS Evora</p>
                                     <p>2018/2018 - 30.000 KM</p>
