--- a/pages/proposta.html
+++ b/pages/proposta.html
@@ -28,13 +28,12 @@
                 </div>
                 <div class="mb-3">
                     <label for="cpf" class="form-label">CPF</label>
-                    <input type="text" class="form-control" id="cpf" placeholder="12345678910">
+                    <input type="text" class="form-control" id="cpf" placeholder="12345678910" required maxlength="11">
                   </div>
                 <div class="mb-3">
                     <label for="message" class="form-label">Mensagem</label>
                     <textarea name="message" class="form-control" id="message" rows="3" required></textarea>
                 </div>
-                
                 <div class="d-grid">
                     <button class="btn btn-primary" type="submit">Enviar</button>
                 </div>
